# turtlebot3_home_service_challenge

./: README.md  turtlebot3_home_service_challenge_ci.repos
.github/workflows/: ros-ci.yml  ros-lint.yml
turtlebot3_home_service_challenge/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_home_service_challenge_aruco/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
turtlebot3_home_service_challenge_aruco/launch/: aruco_node.launch.py
turtlebot3_home_service_challenge_aruco/turtlebot3_home_service_challenge_aruco/: aruco_detect.py  aruco_parking.py  aruco_tracker.py
turtlebot3_home_service_challenge_core/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
turtlebot3_home_service_challenge_core/config/: scenario.yaml
turtlebot3_home_service_challenge_core/launch/: core_node.launch.py
turtlebot3_home_service_challenge_core/turtlebot3_home_service_challenge_core/: home_service_challenge_core.py
turtlebot3_home_service_challenge_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_home_service_challenge_manager/config/: config.yaml  room.yaml
turtlebot3_home_service_challenge_manager/include/turtlebot3_home_service_challenge_manager/: service.h  tb3_hsc_manager.h
turtlebot3_home_service_challenge_manager/launch/: manager.launch
turtlebot3_home_service_challenge_manager/script/: scenario.yaml
turtlebot3_home_service_challenge_manager/src/: service.cpp  tb3_hsc_manager.cpp  tb3_hsc_manager_core.cpp  tb3_hsc_manager_manipulation.cpp  tb3_hsc_manager_mobile.cpp  tb3_hsc_manager_node.cpp
turtlebot3_home_service_challenge_manipulator/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_home_service_challenge_manipulator/include/turtlebot3_home_service_challenge_manipulator/: manipulator_controller.h  manipulator_controller.hpp
turtlebot3_home_service_challenge_manipulator/launch/: manipulator_node.launch.py
turtlebot3_home_service_challenge_manipulator/src/: manipulator_controller.cpp
turtlebot3_home_service_challenge_simulation/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_home_service_challenge_simulation/config/: gazebo_controller.yaml  gazebo_controller_2.yaml
turtlebot3_home_service_challenge_simulation/config/bk/: gripper_controller.yaml  joint_controller.yaml
turtlebot3_home_service_challenge_simulation/launch/: competition.launch.py  test.launch.py
turtlebot3_home_service_challenge_simulation/launch/world/: competition.launch  empty_world.launch
turtlebot3_home_service_challenge_simulation/models/marker10/: model-1_4.sdf  model-1_5.sdf  model.sdf
turtlebot3_home_service_challenge_simulation/models/marker11/: model-1_4.sdf  model-1_5.sdf  model.sdf
turtlebot3_home_service_challenge_simulation/models/marker12/: model-1_4.sdf  model-1_5.sdf  model.sdf
turtlebot3_home_service_challenge_simulation/models/marker13/: model-1_4.sdf  model-1_5.sdf  model.sdf
turtlebot3_home_service_challenge_simulation/models/marker14/: model-1_4.sdf  model-1_5.sdf  model.sdf
turtlebot3_home_service_challenge_simulation/models/marker15/: model-1_4.sdf  model-1_5.sdf  model.sdf
turtlebot3_home_service_challenge_simulation/models/marker16/: model-1_4.sdf  model-1_5.sdf  model.sdf
turtlebot3_home_service_challenge_simulation/models/marker17/: model-1_4.sdf  model-1_5.sdf  model.sdf
turtlebot3_home_service_challenge_simulation/rviz/: tb3_mobile_manipulation.rviz
turtlebot3_home_service_challenge_simulation/worlds/: competition_room.world
turtlebot3_home_service_challenge_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
turtlebot3_home_service_challenge_tools/config/: turtlebot3_hsc_manipulation.srdf
turtlebot3_home_service_challenge_tools/config/camera_calibration/: camera.yaml
turtlebot3_home_service_challenge_tools/config/camera_info/: camerav2_1280x720.yaml
turtlebot3_home_service_challenge_tools/gazebo/: turtlebot3_waffle_pi.gazebo.xacro
turtlebot3_home_service_challenge_tools/include/turtlebot3_home_service_challenge_tools/: filter_node.h
turtlebot3_home_service_challenge_tools/launch/: base.launch.py  camera_ar_track.launch  filter_scan.launch  mobile_teleop_key.launch  move_group.launch.py  moveit_gazebo.launch.py  navigation2.launch.py  test_ar_marker.launch  turtlebot3_home_service_challenge_demo_remote.launch  turtlebot3_home_service_challenge_demo_simulation.launch  turtlebot3_home_service_challenge_moveit.launch  turtlebot3_pi_cam_remote.launch  turtlebot3_robot_remote.launch
turtlebot3_home_service_challenge_tools/launch/navigation/: amcl.launch  move_base.launch  navigation.launch  navigation_display.launch
turtlebot3_home_service_challenge_tools/launch/slam/: gmapping.launch  slam.launch  slam_gazebo.launch
turtlebot3_home_service_challenge_tools/map/: map.pgm  map.yaml
turtlebot3_home_service_challenge_tools/maps/: tb3_hsc.pgm  tb3_hsc.yaml
turtlebot3_home_service_challenge_tools/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  turtlebot3_hsc.yaml
turtlebot3_home_service_challenge_tools/rviz/: tb3_hsc.rviz  tb3_hsc_sim.rviz  tb3_hsc_slam.rviz
turtlebot3_home_service_challenge_tools/src/: filter_node.cpp
turtlebot3_home_service_challenge_tools/urdf/: open_manipulator_x.urdf.xacro  turtlebot3_manipulation.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
