<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_home_service_challenge</name>
  <version>1.0.0</version>
  <description>
    ROS packages for the Turtlebot3 Home Service Challenge (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="ashekim@robotis.com">Ashe Kim</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_home_service_challenge</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_home_service_challenge/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>turtlebot3_home_service_challenge_manager</exec_depend>
  <exec_depend>turtlebot3_home_service_challenge_simulation</exec_depend>
  <exec_depend>turtlebot3_home_service_challenge_tools</exec_depend>
  <export><metapackage/></export>
</package>