<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_home_service_challenge</name>
  <version>2.0.0</version>
  <description>
    ROS packages for the Turtlebot3 Home Service Challenge (meta package)
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/turtlebot3</url>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_home_service_challenge</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_home_service_challenge/issues</url>
  <author email="kmjung@robotis.com">Kayman</author>
  <author email="ashekim@robotis.com">Ashe Kim</author>
  <author email="dddoggi1207@gmail.com">ChanHyeong Lee</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>turtlebot3_home_service_challenge_manager</exec_depend>
  <exec_depend>turtlebot3_home_service_challenge_simulation</exec_depend>
  <exec_depend>turtlebot3_home_service_challenge_tools</exec_depend>
  <export><metapackage/></export>
</package>
