<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_home_service_challenge_manager</name>
  <version>0.0.1</version>
  <description>
    The turtlebot3_home_service_challenge_manager package
  </description>
  <license>Apache 2.0</license>
  <author email="kmjung@robotis.com">kayman</author>
  <author email="ashekim@robotis.com">Ashe Kim</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_home_service_challenge</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_home_service_challenge/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>turtlebot3_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>boost</depend>
  <depend>eigen_conversions</depend>
  <depend>tf</depend>
  <depend>move_base_msgs</depend>
  <depend>roslib</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
</package> 
