<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_home_service_challenge_manipulator</name>
  <version>1.0.3</version>
  <description>
    Manipulator controller package for turtlebot3_home_service_challenge
  </description>
  <maintainer email="pyo@robotis.com">pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/turtlebot3</url>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_home_service_challenge</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_home_service_challenge/issues</url>
  <author email="dddoggi1207@gmail.com">ChanHyeong Lee</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>turtlebot3_home_service_challenge_tools</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <ament_cppcheck language="c++"/>
  </export>
</package>
