<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_home_service_challenge_tools</name>
  <version>1.0.3</version>
  <description>
    turtlebot3_home_service_challenge_tools
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/turtlebot3</url>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_home_service_challenge</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_home_service_challenge/issues</url>
  <author email="kmjung@robotis.com">kayman</author>
  <author email="ashekim@robotis.com">Ashe Kim</author>
  <author email="dddoggi1207@gmail.com">ChanHyeong Lee</author>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>turtlebot3_manipulation_bringup</exec_depend>
  <exec_depend>turtlebot3_manipulation_gazebo</exec_depend>
  <exec_depend>turtlebot3_manipulation_moveit_config</exec_depend>
  <exec_depend>turtlebot3_manipulation_navigation2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
